Switch neutron tempest jobs to run only networking related tests
In commit [1] neutron replaced using "integrated-gate" template with
new "integrated-gate-networking" tempate to run only tests related
to Neutron and Nova in Neutron CI.

This patch switches tempest jobs defined in neutron directly:
* neutron-tempest-dvr
* neutron-tempest-linuxbridge
* neutron-tempest-iptables_hybrid
* neutron-tempest-with-uwsgi

to inherit from this new "tempest-integrated-networking" job and
run also only tests related to Neutron and Nova.

[1] https://review.opendev.org/#/c/669815/

Change-Id: I2aa60fa1aa98e79f8b2597e490c00f7410f2a93d

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -181,7 +181,7 @@
 
 - job:
     name: neutron-tempest-dvr
-    parent: tempest-full-py3
+    parent: tempest-integrated-networking
     timeout: 10800
     required-projects:
       - openstack/devstack-gate
@@ -195,7 +195,7 @@
 
 - job:
     name: neutron-tempest-linuxbridge
-    parent: tempest-full-py3
+    parent: tempest-integrated-networking
     timeout: 10800
     required-projects:
       - openstack/devstack-gate
@@ -317,7 +317,7 @@
 
 - job:
     name: neutron-tempest-iptables_hybrid
-    parent: tempest-full-py3
+    parent: tempest-integrated-networking
     timeout: 10800
     required-projects:
       - openstack/devstack-gate
@@ -427,15 +427,10 @@
 
 - job:
     name: neutron-tempest-with-uwsgi
-    parent: devstack-tempest
+    parent: tempest-integrated-networking
     description: Run neutron Tempest tests with uwsgi
     timeout: 8400
-    required-projects:
-      - openstack/neutron
-      - openstack/tempest
     vars:
-      tox_envlist: full
       devstack_localrc:
-        USE_PYTHON3: true
         NEUTRON_DEPLOY_MOD_WSGI: true
     irrelevant-files: *tempest-irrelevant-files
