--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -53,6 +53,8 @@
             irrelevant-files: *tempest-irrelevant-files
         - grenade-py3:
             irrelevant-files: *tempest-irrelevant-files
+        - tempest-ipv6-only:
+            irrelevant-files: *tempest-irrelevant-files
         - openstacksdk-functional-devstack-networking:
             voting: false
         - neutron-functional-with-uwsgi:
@@ -76,6 +78,8 @@
         - tempest-slow-py3:
             irrelevant-files: *tempest-irrelevant-files
         - grenade-py3:
+            irrelevant-files: *tempest-irrelevant-files
+        - tempest-ipv6-only:
             irrelevant-files: *tempest-irrelevant-files
     periodic:
       jobs:
