Update api-ref location
The api documentation is now published on docs.openstack.org instead
of developer.openstack.org. Update all links that are changed to the
new location.

Note that the api-ref lives at
https://docs.openstack.org/api-ref/network/ and not /networking (that
was changed years ago). This change fixes this as well.

Note that redirects will be set up as well but let's point now to the
new location.

For details, see:
http://lists.openstack.org/pipermail/openstack-discuss/2019-July/007828.html

Change-Id: I492ee1fe97ef0cdae0db0524d5b4df373ba07d41

--- a/doc/source/feature_classification/general_feature_support_matrix.ini
+++ b/doc/source/feature_classification/general_feature_support_matrix.ini
@@ -41,7 +41,7 @@ status=required
 api=core
 cli=openstack network *
 notes=The ability to create, modify and delete networks.
-    https://developer.openstack.org/api-ref/networking/v2/#networks
+    https://docs.openstack.org/api-ref/network/v2/#networks
 networking-ovs=complete
 networking-linux-bridge=complete
 networking-odl=complete
@@ -54,7 +54,7 @@ status=required
 api=core
 cli=openstack subnet *
 notes=The ability to create and manipulate subnets and subnet pools.
-    https://developer.openstack.org/api-ref/networking/v2/#subnets
+    https://docs.openstack.org/api-ref/network/v2/#subnets
 networking-ovs=complete
 networking-linux-bridge=complete
 networking-odl=complete
@@ -67,7 +67,7 @@ status=required
 api=core
 cli=openstack port *
 notes=The ability to create and manipulate ports.
-    https://developer.openstack.org/api-ref/networking/v2/#ports
+    https://docs.openstack.org/api-ref/network/v2/#ports
 networking-ovs=complete
 networking-linux-bridge=complete
 networking-odl=complete
@@ -80,7 +80,7 @@ status=required
 api=router
 cli=openstack router *
 notes=The ability to create and manipulate routers.
-    https://developer.openstack.org/api-ref/networking/v2/#routers-routers
+    https://docs.openstack.org/api-ref/network/v2/#routers-routers
 networking-ovs=complete
 networking-linux-bridge=complete
 networking-odl=complete
@@ -94,7 +94,7 @@ api=security-group
 cli=openstack security group *
 notes=Security groups are set by default, and can be modified to control
     ingress & egress traffic.
-    https://developer.openstack.org/api-ref/networking/v2/#security-groups-security-groups
+    https://docs.openstack.org/api-ref/network/v2/#security-groups-security-groups
 networking-ovs=complete
 networking-linux-bridge=complete
 networking-odl=complete
@@ -142,7 +142,7 @@ title=Quality of Service
 status=mature
 api=qos
 notes=Support for Neutron Quality of Service policies and API.
-    https://developer.openstack.org/api-ref/networking/v2/#qos-policies-qos
+    https://docs.openstack.org/api-ref/network/v2/#qos-policies-qos
 networking-ovs=complete
 networking-linux-bridge=partial
 networking-odl=partial
@@ -152,7 +152,7 @@ networking-ovn=complete
 [operation.BGP]
 title=Border Gateway Protocol
 status=immature
-notes=https://developer.openstack.org/api-ref/networking/v2/#bgp-mpls-vpn-interconnection
+notes=https://docs.openstack.org/api-ref/network/v2/#bgp-mpls-vpn-interconnection
 networking-ovs=complete
 networking-linux-bridge=unknown
 networking-odl=unknown
@@ -177,7 +177,7 @@ status=mature
 api=trunk
 notes=Neutron extension to access lots of neutron networks over
     a single vNIC as tagged/encapsulated traffic.
-    https://developer.openstack.org/api-ref/networking/v2/#trunk-networking
+    https://docs.openstack.org/api-ref/network/v2/#trunk-networking
 networking-ovs=complete
 networking-linux-bridge=complete
 networking-odl=incomplete
@@ -189,7 +189,7 @@ title=Metering
 status=mature
 api=metering
 notes=Meter traffic at the L3 router levels.
-    https://developer.openstack.org/api-ref/networking/v2/#metering-labels-and-rules-metering-labels-metering-label-rules
+    https://docs.openstack.org/api-ref/network/v2/#metering-labels-and-rules-metering-labels-metering-label-rules
 networking-ovs=complete
 networking-linux-bridge=complete
 networking-odl=incomplete
