Fix log directory permissions for functional job
After [0] devstack no longer changes the ownership of the whole
/opt/stack tree to the stack user unconditionally. So we need to create
/opt/stack/logs with the correct owner directly.

[0] https://review.opendev.org/203698

Change-Id: I4597c83bfce6267ef93bb8f7b0de62fa3ac94db4
Closes-Bug: 1838811

--- a/roles/setup_logdir/tasks/main.yaml
+++ b/roles/setup_logdir/tasks/main.yaml
@@ -3,6 +3,6 @@
   file:
     path: "{{ logdir }}"
     state: directory
-    owner: "{{ ansible_user }}"
+    owner: stack
     group: "{{ ansible_user }}"
     mode: 0775
