Kill all processes running in a namespace before deletion
In "NamespaceFixture", before deleting the namespace, this patch
introduces a check to first kill all processes running on it.

Closes-Bug: #1838793

Conflicts:
    neutron/privileged/agent/linux/ip_lib.py
    neutron/tests/functional/privileged/agent/linux/test_ip_lib.py

Change-Id: I27f3db33f2e7ab685523fd2d6922177d7c9cb71b
(cherry picked from commit be7bb4d0f584a05d3e2725f1179ffaed6e8f449d)

--- a/etc/neutron/rootwrap.d/debug.filters
+++ b/etc/neutron/rootwrap.d/debug.filters
@@ -16,3 +16,7 @@ ping: RegExpFilter, ping, root, ping, -w, \d+, -c, \d+, [0-9\.]+
 ping_alt: RegExpFilter, ping, root, ping, -c, \d+, -w, \d+, [0-9\.]+
 ping6: RegExpFilter, ping6, root, ping6, -w, \d+, -c, \d+, [0-9A-Fa-f:]+
 ping6_alt: RegExpFilter, ping6, root, ping6, -c, \d+, -w, \d+, [0-9A-Fa-f:]+
+
+# "sleep" command, only for testing
+sleep: RegExpFilter, sleep, root, sleep, \d+
+kill_sleep: KillFilter, root, sleep, -9
