[stable only] Fix tempest regex passing
Instead of a single-quoted regex now the regex is passed as:

''"'"'(^tempest\.scenario.*)|(?!.*\[.*\bslow\b.*\])(^tempest\.api)'"'"'' [1]

which ends up in "The specified regex doesn't match with anything" [2]
This regex is only used in stable/ocata.

[1] http://logs.openstack.org/62/663162/2/check/neutron-tempest-dvr/4f655c6/job-output.txt.gz#_2019-07-09_00_03_41_976197
[2] http://logs.openstack.org/62/663162/2/check/neutron-tempest-dvr/4f655c6/job-output.txt.gz#_2019-07-09_00_03_45_633576

Change-Id: I47b56c7778f7ddc5d5012055c2bd925069479ebe

--- a/playbooks/legacy/neutron-tempest-linuxbridge/run.yaml
+++ b/playbooks/legacy/neutron-tempest-linuxbridge/run.yaml
@@ -46,7 +46,7 @@
           export DEVSTACK_GATE_TEMPEST_FULL=1
           export DEVSTACK_GATE_NEUTRON=1
           export DEVSTACK_GATE_TLSPROXY=1
-          export DEVSTACK_GATE_TEMPEST_REGEX="'(^tempest\.scenario.*)|(?!.*\[.*\bslow\b.*\])(^tempest\.api)' --blacklist-file=/opt/stack/new/neutron/neutron/tests/contrib/tempest_blacklist.txt"
+          export DEVSTACK_GATE_TEMPEST_REGEX="(^tempest\.scenario.*)|(?!.*\[.*\bslow\b.*\])(^tempest\.api) --blacklist-file=/opt/stack/new/neutron/neutron/tests/contrib/tempest_blacklist.txt"
           export BRANCH_OVERRIDE=default
           if [ "$BRANCH_OVERRIDE" != "default" ] ; then
               export OVERRIDE_ZUUL_BRANCH=$BRANCH_OVERRIDE
