--- a/playbooks/legacy/neutron-tempest-multinode-full/run.yaml
+++ b/playbooks/legacy/neutron-tempest-multinode-full/run.yaml
@@ -51,7 +51,7 @@
           export DEVSTACK_GATE_TLSPROXY=1
           # Default to non DVR
           export DEVSTACK_GATE_NEUTRON_DVR=0
-          export DEVSTACK_GATE_TEMPEST_REGEX="'(^tempest\.scenario.*)|(?!.*\[.*\bslow\b.*\])(^tempest\.api)' --blacklist-file=/opt/stack/new/neutron/neutron/tests/contrib/tempest_blacklist.txt"
+          export DEVSTACK_GATE_TEMPEST_REGEX="(^tempest\.scenario.*)|(?!.*\[.*\bslow\b.*\])(^tempest\.api) --blacklist-file=/opt/stack/new/neutron/neutron/tests/contrib/tempest_blacklist.txt"
           export BRANCH_OVERRIDE=default
           if [ "$BRANCH_OVERRIDE" != "default" ] ; then
               export OVERRIDE_ZUUL_BRANCH=$BRANCH_OVERRIDE
