--- a/playbooks/legacy/neutron-tempest-ovsfw/run.yaml
+++ b/playbooks/legacy/neutron-tempest-ovsfw/run.yaml
@@ -31,7 +31,7 @@
           export DEVSTACK_GATE_TEMPEST=1
           export DEVSTACK_GATE_TEMPEST_FULL=1
           export DEVSTACK_GATE_NEUTRON=1
-          export DEVSTACK_GATE_TEMPEST_REGEX="'(^tempest\.scenario.*)|(?!.*\[.*\bslow\b.*\])(^tempest\.api)' --blacklist-file=/opt/stack/new/neutron/neutron/tests/contrib/tempest_blacklist.txt"
+          export DEVSTACK_GATE_TEMPEST_REGEX="(^tempest\.scenario.*)|(?!.*\[.*\bslow\b.*\])(^tempest\.api) --blacklist-file=/opt/stack/new/neutron/neutron/tests/contrib/tempest_blacklist.txt"
           export BRANCH_OVERRIDE=default
           if [ "$BRANCH_OVERRIDE" != "default" ] ; then
               export OVERRIDE_ZUUL_BRANCH=$BRANCH_OVERRIDE
