--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -19,7 +19,10 @@
         - neutron-functional
         - neutron-functional-python27
         - neutron-fullstack
-        - neutron-rally-task
+        - neutron-rally-task:
+            # TODO(slaweq): switch rally job to be voting again when bug
+            # https://bugs.launchpad.net/neutron/+bug/1843282 will be fixed
+            voting: false
         - neutron-tempest-dvr
         - neutron-tempest-linuxbridge
         - neutron-grenade-multinode
@@ -39,7 +42,10 @@
               - ^tox.ini$
         - neutron-tempest-dvr-ha-multinode-full
         - neutron-tempest-iptables_hybrid
-        - neutron-tempest-iptables_hybrid-fedora
+        - neutron-tempest-iptables_hybrid-fedora:
+            # TODO(slaweq): switch rally job to be voting again when bug
+            # https://bugs.launchpad.net/neutron/+bug/1843413 will be fixed
+            voting: false
         - neutron-grenade
         - ironic-tempest-ipa-wholedisk-bios-agent_ipmitool-tinyipa:
             voting: false
