--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -396,14 +396,17 @@
 
 - job:
     name: neutron-tempest-postgres-full
-    parent: legacy-dsvm-base
-    run: playbooks/legacy/neutron-tempest-postgres-full/run.yaml
-    post-run: playbooks/legacy/neutron-tempest-postgres-full/post.yaml
+    parent: tempest-integrated-networking
     timeout: 7800
     required-projects:
       - openstack/devstack-gate
       - openstack/neutron
       - openstack/tempest
+    vars:
+      devstack_services:
+        postgresql: true
+        mysql: false
+    irrelevant-files: *tempest-irrelevant-files
 
 - job:
     name: neutron-tempest-with-os-ken-master
