--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -85,6 +85,7 @@
       jobs:
         - neutron-functional
         - neutron-tempest-postgres-full
+        - neutron-tempest-mariadb-full
         - neutron-tempest-with-os-ken-master
     experimental:
       jobs:
@@ -408,6 +409,19 @@
       devstack_services:
         postgresql: true
         mysql: false
+    irrelevant-files: *tempest-irrelevant-files
+
+- job:
+    name: neutron-tempest-mariadb-full
+    parent: tempest-integrated-networking
+    timeout: 7800
+    required-projects:
+      - openstack/devstack-gate
+      - openstack/neutron
+      - openstack/tempest
+    vars:
+      devstack_localrc:
+        MYSQL_SERVICE_NAME: mariadb
     irrelevant-files: *tempest-irrelevant-files
 
 - job:
