Add correct UPPER_CONSTRAINTS_FILE to neutron-functional job
This patch sets UPPER_CONSTRAINTS_FILE that it points to file created by
zuul.
Due to this change requirements with "speculative future changes" can be
used in gate. So zuul will be now able to use requirements file from
patch which is also in gate but is not merged yet.

Change-Id: Ib3cc25460bea7030b4352fdc36147a0a16c7e422

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -115,6 +115,7 @@
     required-projects:
       - opendev.org/openstack/devstack
       - openstack/neutron
+      - openstack/requirements
     roles:
       - zuul: openstack/devstack
     pre-run: playbooks/configure_functional_job.yaml
@@ -135,6 +136,7 @@
         DATABASE_PASSWORD: stackdb
       tox_envlist: dsvm-functional
       tox_install_siblings: false
+      tox_constraints_file: '{{ ansible_user_dir }}/src/opendev.org/openstack/requirements/upper-constraints.txt'
       zuul_copy_output:
         # We need to copy directory with logs to have it in job artifacts also,
         # /opt/stack/logs is default logs directory defined in neutron's
