Add irrelevant files to neutron-centos-7-tripleo-standalone
This job runs nearly three hours, let's add the same irreleant-files
list as to all other tempest tests so that this does not run for doc
changes and translation imports.

Change-Id: I26a8c677f04ae8cffdeb0983cde072111693d0dc

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -454,3 +454,4 @@
           - 'environments/services/neutron-ovs.yaml'
         tempest_test_whitelist:
           - 'tempest.scenario.test_network_basic_ops.TestNetworkBasicOps.test_network_basic_ops'
+    irrelevant-files: *tempest-irrelevant-files
