Temporary disable CI job neutron-functional-python27
Due to the high rate of TIME_OUT errors in the CI and the gate.

Change-Id: I2f584542efc4bac743e34d6ee28a94aa87c3c4f6
Related-Bug: #1848944

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -17,7 +17,8 @@
     check:
       jobs:
         - neutron-functional
-        - neutron-functional-python27
+        # TODO(ralonsoh): until the bug 1848944 is fixed or PY2 removed
+        #- neutron-functional-python27:
         - neutron-fullstack
         - neutron-rally-task
         - neutron-tempest-dvr
@@ -67,7 +68,8 @@
     gate:
       jobs:
         - neutron-functional
-        - neutron-functional-python27
+        # TODO(ralonsoh): until the bug 1848944 is fixed or PY2 removed
+        #- neutron-functional-python27:
         - neutron-fullstack
         - neutron-tempest-dvr
         - neutron-tempest-linuxbridge
