--- a/etc/rootwrap.conf
+++ b/etc/rootwrap.conf
@@ -26,6 +26,9 @@ syslog_log_facility=syslog
 # ERROR means only log unsuccessful attempts
 syslog_log_level=ERROR
 
+# Rootwrap daemon exits after this seconds of inactivity
+daemon_timeout=600
+
 [xenapi]
 # XenAPI configuration is only required by the L2 agent if it is to
 # target a XenServer/XCP compute host's dom0.
