Explicit mention py2 for neutron-grenade job
Devstack is moving to py3 by default[1] and neutron-grenade
will fail. There are patches up to drop the neutron-grenade
job but those are not merged yet.

let's keep this job runnable by explicitly mention the py2
and dropping plan will continue as it is.

[1] http://lists.openstack.org/pipermail/openstack-discuss/2019-November/010938.html

Change-Id: I086b5eee710b80e95703abb46a076aff5b7741f2

--- a/playbooks/legacy/neutron-grenade/run.yaml
+++ b/playbooks/legacy/neutron-grenade/run.yaml
@@ -43,6 +43,7 @@
           set -x
           export PROJECTS="openstack/grenade $PROJECTS"
           export PYTHONUNBUFFERED=true
+          export DEVSTACK_GATE_USE_PYTHON3=False
           export DEVSTACK_GATE_TEMPEST=1
           export DEVSTACK_GATE_GRENADE=pullup
           export DEVSTACK_GATE_NEUTRON=1
