--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ netaddr>=0.7.18 # BSD
 netifaces>=0.10.4 # MIT
 neutron-lib>=1.29.1 # Apache-2.0
 python-neutronclient>=6.7.0 # Apache-2.0
-tenacity>=3.2.1 # Apache-2.0
+tenacity>=4.4.0 # Apache-2.0
 SQLAlchemy>=1.2.0 # MIT
 WebOb>=1.8.2 # MIT
 keystoneauth1>=3.4.0 # Apache-2.0
@@ -46,7 +46,7 @@ oslo.versionedobjects>=1.35.1 # Apache-2.0
 osprofiler>=2.3.0 # Apache-2.0
 os-ken >= 0.3.0 # Apache-2.0
 ovs>=2.8.0 # Apache-2.0
-ovsdbapp>=0.9.1 # Apache-2.0
+ovsdbapp>=0.17.0 # Apache-2.0
 psutil>=3.2.2 # BSD
 pyroute2>=0.5.3;sys_platform!='win32' # Apache-2.0 (+ dual licensed GPL2)
 
@@ -55,3 +55,5 @@ openstacksdk>=0.31.2 # Apache-2.0
 python-designateclient>=2.7.0 # Apache-2.0
 os-xenapi>=0.3.1 # Apache-2.0
 os-vif>=1.15.1 # Apache-2.0
+futurist>=1.2.0 # Apache-2.0
+tooz>=1.58.0 # Apache-2.0
