[OVN] Move OVN metadata agent
This patch imports the OVN metadata agent code from networking-ovn.

Previous paths in networking-ovn tree:
./networking_ovn/agent/metadata -> ./neutron/agent/ovn/metadata
./networking_ovn/conf/agent/metadata -> ./neutron/conf/agent/ovn/metadata.py

Change-Id: If0c46909ec0d83df1be98300badeb36753b1002b
Related-Blueprint: neutron-ovn-merge
Signed-off-by: Lucas Alvares Gomes <lucasagomes@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,8 @@ data_files =
 scripts =
     bin/neutron-rootwrap-xen-dom0
 
+# TODO(lucasagomes): Add the metadata agent (and potentially others)
+# after the networking-ovn code is migrated into neutron
 [entry_points]
 wsgi_scripts =
     neutron-api = neutron.server:get_application
