Add a tox requirements target
In some other repos you can run 'tox -e requirements' and
run the requirements checks, which is useful when adding
or changing requirements.  Add it to tox.ini and fix a
python2 warning it noticed as well.

Change-Id: I8caa7f755d1276ffe581583a1ea61bb5f0473924

--- a/tox.ini
+++ b/tox.ini
@@ -209,3 +209,10 @@ deps =
   -c{toxinidir}/lower-constraints.txt
   -r{toxinidir}/test-requirements.txt
   -r{toxinidir}/requirements.txt
+
+[testenv:requirements]
+deps =
+  -egit+https://opendev.org/openstack/requirements#egg=openstack-requirements
+whitelist_externals = sh
+commands =
+    sh -c '{envdir}/src/openstack-requirements/playbooks/files/project-requirements-change.py --req {envdir}/src/openstack-requirements --local {toxinidir} master'
