Use constraints for docs tox target and cap hacking
This patch fixes 3 problems to fix gate jobs in Rocky.

1. In Stein the docs target started to fail when new release of
   neutron-lib appeared. This is because tox installs neutron and its
   requirements without any constraints. To fix this both the upper
   constraints and neutron requirements needs to be added to
   dependencies of docs target.

2. Cap hacking in test-requirements.txt

   hacking as a linter is in global requirements blacklist and so is
   not in constraints. Recent release introduced new rules that
   required fix on master, on stable branches we should rather cap to
   the version that was in use during this release development.

3. Update sphinx requirements

   Requirement check is failing on sphinx:

   Requirement(package='sphinx', location='', specifiers='!=1.6.6,>=1.6.2', markers='', comment='# BSD', extras=frozenset()) 'markers': '' does not match "python_version>='3.4'"
   Could not find a global requirements entry to match package {}. If the package is already included in the global list, the name or platform markers there may not match the local settings.

Conflicts:
       tox.ini

Closes-Bug: #1856156
Change-Id: Iea61238f37fdf24c0264f96d104ee0b3b6aec8e2
(cherry picked from commit 07be7934359aa121761396ba47128904f19cb2e4)
(cherry picked from commit d1c4ba581085f4978da82a597b1387d60e79ff0c)
(cherry picked from commit 34239888eb661415ed372808304a42339563dad6)

--- a/tox.ini
+++ b/tox.ini
@@ -143,7 +143,11 @@ commands = {posargs}
 
 [testenv:docs]
 basepython = python3
-deps = -r{toxinidir}/doc/requirements.txt
+envdir = {toxworkdir}/docs
+deps =
+  -c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/rocky}
+  -r{toxinidir}/doc/requirements.txt
+  -r{toxinidir}/requirements.txt
 commands = sphinx-build -W -b html doc/source doc/build/html
 
 [testenv:linkcheck]
