--- a/tox.ini
+++ b/tox.ini
@@ -146,7 +146,10 @@ commands = {posargs}
 [testenv:docs]
 basepython = python3
 envdir = {toxworkdir}/docs
-deps = -r{toxinidir}/doc/requirements.txt
+deps =
+  -c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/train}
+  -r{toxinidir}/doc/requirements.txt
+  -r{toxinidir}/requirements.txt
 commands = sphinx-build -W -b html doc/source doc/build/html
 
 [testenv:pdf-docs]
