--- a/zuul.d/tripleo.yaml
+++ b/zuul.d/tripleo.yaml
@@ -8,8 +8,15 @@
       featureset_override:
         standalone_environment_files:
           - 'environments/services/neutron-ovs.yaml'
+        run_tempest: false
+        tempest_format: container
+        tempest_run_concurrency: 2
+        tempest_private_net_provider_type: 'vxlan'
+        tempest_tempest_conf_overrides:
+          auth.use_dynamic_credentials: true
         tempest_test_whitelist:
           - 'tempest.scenario.test_network_basic_ops.TestNetworkBasicOps.test_network_basic_ops'
+        use_os_tempest: true
     irrelevant-files: &irrelevant-files
       - ^(test-|)requirements.txt$
       - ^.*\.rst$
