[OVN] Add OVN metadata entry points
This patch is migrating the entry points for the OVN metadata agent.

Change-Id: I4062ade1231e29344a38cb69f32c3a0f198a7d03
Co-Authored-By: Daniel Alvarez <dalvarez@redhat.com>
Related-Blueprint: neutron-ovn-merge
Signed-off-by: Lucas Alvares Gomes <lucasagomes@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,8 +28,6 @@ data_files =
 scripts =
     bin/neutron-rootwrap-xen-dom0
 
-# TODO(lucasagomes): Add the metadata agent (and potentially others)
-# after the networking-ovn code is migrated into neutron
 [entry_points]
 wsgi_scripts =
     neutron-api = neutron.server:get_application
@@ -57,6 +55,7 @@ console_scripts =
     neutron-sriov-nic-agent = neutron.cmd.eventlet.plugins.sriov_nic_neutron_agent:main
     neutron-sanity-check = neutron.cmd.sanity_check:main
     neutron-status = neutron.cmd.status:main
+    neutron-ovn-metadata-agent = neutron.cmd.eventlet.agents.ovn_metadata:main
 neutron.core_plugins =
     ml2 = neutron.plugins.ml2.plugin:Ml2Plugin
 neutron.service_plugins =
@@ -152,6 +151,7 @@ oslo.config.opts =
     neutron.ml2.ovs.agent = neutron.opts:list_ovs_opts
     neutron.ml2.sriov.agent = neutron.opts:list_sriov_agent_opts
     neutron.ml2.xenapi = neutron.opts:list_xenapi_opts
+    neutron.ovn.metadata.agent = neutron.conf.agent.ovn.metadata.config:list_metadata_agent_opts
     nova.auth = neutron.opts:list_auth_opts
 oslo.config.opts.defaults =
     neutron = neutron.common.config:set_cors_middleware_defaults
