Define new ipv6-only job for OVN
As part of Train community goal 'Support IPv6-Only Deployments and Testing'[1],
Tempest has defined the base job 'devstack-tempest-ipv6' (adding
in Depends-On patch) which will deploy services on IPv6.

This commit adds the new job 'neutron-ovn-tempest-ovs-release-ipv6-only'
run on check queue which is derived from 'devstack-tempest-ipv6'.
A future change can make this voting in the gate.

Verification structure will be:
- 'devstack-IPv6' deploy the service on IPv6
- 'devstack-tempest-ipv6' run will verify the IPv6-only setting and listen
  address
- 'networking-ovn-tempest-ovs-release-ipv6-only' will run the tests.

Story: #2005477
Task: #35908

Based on https://review.opendev.org/#/c/673488/ from networking-ovn.

[1] https://governance.openstack.org/tc/goals/train/ipv6-support-and-testing.html

Depends-on: https://review.opendev.org/#/c/703685/
Change-Id: Ia0dcf47ead268aa4b265904c9e1ae1e38d77456a

--- a/zuul.d/tempest-singlenode.yaml
+++ b/zuul.d/tempest-singlenode.yaml
@@ -149,14 +149,14 @@
     # job instead of devstack-tempest
     parent: devstack-tempest
     timeout: 10800
-    required-projects:
+    required-projects: &ovn-base-required-projects
       - openstack/devstack-gate
       - openstack/neutron
       - openstack/neutron-tempest-plugin
       - openstack/octavia
       - openstack/tempest
     irrelevant-files: *irrelevant-files
-    vars:
+    vars: &ovn-base-vars
       tox_envlist: all-plugin
       tempest_test_regex: "^(?!.*\
         (?:.*\\[.*slow.*\\])|\
@@ -266,6 +266,23 @@
     vars:
       devstack_localrc:
         OVN_BRANCH: master
+
+- job:
+    name: neutron-ovn-tempest-ovs-ipv6-only-base
+    description: Base job for devstack/tempest to test Neutron with ovn driver in an IPv6-only deployment
+    parent: devstack-tempest-ipv6
+    timeout: 10800
+    irrelevant-files: *irrelevant-files
+    required-projects: *ovn-base-required-projects
+    vars: *ovn-base-vars
+
+- job:
+    name: neutron-ovn-tempest-ovs-release-ipv6-only
+    description: Job testing for devstack/tempest testing Neutron with ovn driver and latest released OVN branch in an IPv6-only deployment
+    parent: neutron-ovn-tempest-ovs-ipv6-only-base
+    vars:
+      devstack_localrc:
+        OVN_BRANCH: branch-2.12
 
 - job:
     name: neutron-ovn-tempest-ovs-release
