--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -46,6 +46,8 @@
         - tempest-slow-py3:
             irrelevant-files: *irrelevant-files
         - neutron-ovn-tempest-ovs-release
+        - neutron-ovn-tempest-ovs-release-ipv6-only:
+            voting: false
         # TODO(slaweq): add this job again to the check queue when it will be
         # working fine on python 3
         #- networking-midonet-tempest-aio-ml2-centos-7:
