--- a/zuul.d/tempest-singlenode.yaml
+++ b/zuul.d/tempest-singlenode.yaml
@@ -208,6 +208,7 @@
         ADVANCED_INSTANCE_TYPE: ds512M
         ADVANCED_INSTANCE_USER: ubuntu
         BUILD_TIMEOUT: 784
+        ENABLE_TLS: True
       devstack_plugins:
         neutron: https://opendev.org/openstack/neutron
         neutron-tempest-plugin: https://opendev.org/openstack/neutron-tempest-plugin
@@ -258,6 +259,7 @@
         s-container: false
         s-object: false
         s-proxy: false
+        tls-proxy: true
 
 - job:
     name: neutron-ovn-tempest-ovs-master
